# raster_graphics_editor

./: .gitignore  CMakeLists.txt  README.md  equipes  equipes.md  help.txt  indication  indication.txt  journal.md  journal.xml  main.c
src/: Makefile  includes.h  main.c  my_struct_images.c  my_struct_images.h  parsing.c  parsing.h  struct_image.c  traitement_fenetre.c  traitement_image.c  traitement_image.h
src/gestions/: Makefile
src/gestions/my_struct_images/: Makefile  my_struct_images.c  my_struct_images.h
src/gestions/traitement_fenetre/: Makefile  traitement_fenetre.c  traitement_fenetre.h
src/gestions/traitement_image/: Makefile  traitement_image.c  traitement_image.h
src/parsing/: Makefile  parsing.c  parsing.h
test/: Makefile  common.h  main.c  testes.c  testes.h
